added tests for accepting and finishing orders

--- a/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
+++ b/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
@@ -49,10 +49,10 @@
         <mat-list-item (click)="this.state=1"
         >Drink card</mat-list-item
       >
-      <mat-list-item (click)="this.state=5"
+      <mat-list-item (click)="this.state=5" id="list-new-orders-fild"
         >New orders</mat-list-item
       >
-      <mat-list-item (click)="this.state=4"
+      <mat-list-item (click)="this.state=4" id="list-acc-orders-fild"
         >Accepted orders</mat-list-item
       >
       <mat-list-item (click)="this.state=7">
