--- a/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
+++ b/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
@@ -53,10 +53,10 @@
         <mat-list-item (click)="this.state=1"
         >Dish card</mat-list-item
       >
-      <mat-list-item (click)="this.state=5"
+      <mat-list-item (click)="this.state=5" id="list-new-orders-fild"
         >New orderes</mat-list-item
       >
-      <mat-list-item (click)="this.state=4"
+      <mat-list-item (click)="this.state=4" id="list-acc-orders-fild"
         >Accepted orders</mat-list-item
       >
     </mat-action-list>
