--- a/restaurant-front/src/modules/shared/components/finish-dialog/finish-dialog.component.html
+++ b/restaurant-front/src/modules/shared/components/finish-dialog/finish-dialog.component.html
@@ -4,5 +4,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button (click)="onYessClick()">Yess</button>
+  <button mat-button id = "Yess"(click)="onYessClick()">Yess</button>
 </div>
