--- a/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
+++ b/restaurant-front/src/modules/shared/components/order-view/order-view.component.html
@@ -6,7 +6,7 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="name"
         sortActionDescription="Sort by name"> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.menuItemName}} </td>
+        <td mat-cell *matCellDef="let element" id = "name-{{element.menuItemName}}"> {{element.menuItemName}} </td>
       </ng-container>
 
       <ng-container matColumnDef="quantity">
@@ -24,7 +24,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> {{typeBtn}} </th>
         <td mat-cell *matCellDef="let element" >
-             <button mat-button (click)="openDialog(element.id)">{{typeBtn}}</button>
+             <button mat-button (click)="openDialog(element.id)" id="btn{{element.id}}">{{typeBtn}}</button>
         </td>
       </ng-container>
 
