--- a/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
+++ b/restaurant-front/src/modules/shared/components/list-accepted-orders/list-accepted-orders.component.html
@@ -8,6 +8,9 @@
     </mat-card>
 
 </mat-list>
+
 <br/>
 <div *ngIf = "this.dataSource.data.length == 0">There is no accepted orders</div>
+<!-- <mat-paginator style="position:bottom;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
 </div>
+
