--- a/restaurant-front/src/modules/shared/components/list-new-orders/list-new-orders.component.html
+++ b/restaurant-front/src/modules/shared/components/list-new-orders/list-new-orders.component.html
@@ -7,7 +7,9 @@
         </mat-card-header>
     </mat-card>
 </mat-list>
+
 <br/>
 <div *ngIf = "this.dataSource.data.length == 0">There is no new orders</div>
+<!-- <mat-paginator style="position:bottom;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator> -->
 </div>
 
