test for searching

--- a/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
+++ b/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
@@ -46,7 +46,7 @@
       <mat-divider></mat-divider>
 
     <mat-action-list>
-        <mat-list-item (click)="this.state=1"
+        <mat-list-item (click)="this.state=1" id="drink-table"
         >Drink card</mat-list-item
       >
       <mat-list-item (click)="this.state=5" id="list-new-orders-fild"
