--- a/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
+++ b/restaurant-front/src/modules/chef/pages/chef-dashboard/chef-dashboard.component.html
@@ -50,7 +50,7 @@
     <mat-divider></mat-divider>
 
     <mat-action-list>
-        <mat-list-item (click)="this.state=1"
+        <mat-list-item (click)="this.state=1" id="dish-table"
         >Dish card</mat-list-item
       >
       <mat-list-item (click)="this.state=5" id="list-new-orders-fild"
