--- a/restaurant-front/src/modules/manager/pages/paycheck-table/paycheck-table.component.html
+++ b/restaurant-front/src/modules/manager/pages/paycheck-table/paycheck-table.component.html
@@ -14,7 +14,7 @@
             name="itemSearch"
           />
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field id="type-filter-input">
           <mat-label>User role</mat-label>
           <mat-select formControlName="filter">
             <mat-option *ngFor="let role of roles" [value]="role.value">
