--- a/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
+++ b/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
@@ -15,10 +15,10 @@
             name="itemSearch"
           />
           </mat-form-field>
-          <mat-form-field class="example-full-width" appearance="fill" >
+          <mat-form-field class="example-full-width" appearance="fill" id="type-filter-input">
             <mat-label>Filter</mat-label>
             <mat-select formControlName="filter">
-              <mat-option *ngFor="let dishType of dishTypes" [value]="dishType.value">
+              <mat-option *ngFor="let dishType of dishTypes" [value]="dishType.value" id="filter{{dishType.value}}">
                 {{dishType.viewValue}}
               </mat-option>
             </mat-select>
@@ -47,7 +47,7 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header="name"
           sortActionDescription="Sort by name"> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element" id="{{element.name}}"> {{element.name}} </td>
         </ng-container>
   
         <ng-container matColumnDef="type">
