Created e2e tests for ChangePassword, ViewNotifications, SwitchAccounts

--- a/restaurant-front/src/modules/shared/components/other-accounts/other-accounts.component.html
+++ b/restaurant-front/src/modules/shared/components/other-accounts/other-accounts.component.html
@@ -15,6 +15,7 @@
       <span >If account is not listed then continue to login</span>
       <button
         mat-flat-button
+        id="other-account-login-btn"
         type="button"
         color="primary"
         class="btn btn-primary"
