--- a/restaurant-front/src/modules/shared/components/view-notifications/view-notifications.component.html
+++ b/restaurant-front/src/modules/shared/components/view-notifications/view-notifications.component.html
@@ -27,6 +27,7 @@
               <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
               <td mat-cell *matCellDef="let element">
                 <button
+                  id="set-notification-inactive"
                   *ngIf="column == 'active'"
                   class="details"
                   (click)="onViewedNotification(element)"
