--- a/restaurant-front/src/modules/shared/components/change-password/change-password.component.html
+++ b/restaurant-front/src/modules/shared/components/change-password/change-password.component.html
@@ -54,6 +54,7 @@
             Cancel
           </button>
           <button
+            id="regular-change-password-button"
             mat-flat-button
             type="button"
             color="primary"
