--- a/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
+++ b/restaurant-front/src/modules/admin/pages/admin-dashboard/admin-dashboard.component.html
@@ -14,16 +14,16 @@
     <mat-sidenav class="mat-elevation-z8">
       <span class="span">Options</span>
       <mat-divider></mat-divider>
-      <button mat-button class="menu-button">
+      <button mat-button class="menu-button" id="employeesBttn">
         <mat-icon>person</mat-icon>
         <span>Employees</span>
       </button>
-      <button mat-button class="menu-button" (click)="onRestaurantTablesClicked()">
+      <button mat-button class="menu-button" id="restaurantBttn" (click)="onRestaurantTablesClicked()">
         <mat-icon> restaurant</mat-icon>
         <span>Restaurant preview</span>
       </button>
       <mat-divider></mat-divider>
-      <button mat-button class="menu-button" (click)="onLogoutButtonClicked()" >
+      <button mat-button class="menu-button" id="logoutBttn" (click)="onLogoutButtonClicked()" >
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
       </button>
