--- a/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
+++ b/restaurant-front/src/modules/shared/components/dish-table/dish-table.component.html
@@ -63,6 +63,7 @@
             type="submit"
             class="submit-button"
             id="submit-button"
+            name="btn{{element.name}}"
             matSuffix
             mat-button
           >
