--- a/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
+++ b/restaurant-front/src/modules/bartender/pages/add-drink/add-drink.component.html
@@ -27,7 +27,7 @@
         
           <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Type</mat-label>
-            <mat-select [(value)]="selectedValue" required>
+            <mat-select [(value)]="selectedValue" required id = "drink-type-select">
               <mat-option *ngFor="let drinkType of drinkTypes" [value]="drinkType.value">
                 {{drinkType.viewValue}}
               </mat-option>
@@ -36,7 +36,7 @@
   
           <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Container</mat-label>
-            <mat-select [(value)]="selectedContainer" required>
+            <mat-select [(value)]="selectedContainer" required id = "drink-container-select">
               <mat-option *ngFor="let container of containers" [value]="container.value">
                 {{container.viewValue}}
               </mat-option>
@@ -44,17 +44,31 @@
           </mat-form-field>
          
   
-          <input type="file" class="file-input"
-         (change)="onFileSelected($event)" #fileUpload/>
-  
-          <div class="file-upload">
-  
-            {{fileName || "No file uploaded yet."}}
-  
-              <button mat-mini-fab color="primary" class="upload-btn"
-                (click)="fileUpload.click()">
-                  <mat-icon>attach_file</mat-icon>
-              </button>
+          <div class="img-space">
+            <ng-container *ngIf="isImageSaved; else elseTemplate">
+              <img
+                style="width: 95px;height: 95%"
+                [src]="url"
+                alt="Image"
+                id="realImg"
+              />
+            </ng-container>
+            <ng-template #elseTemplate>
+              <img
+                style="max-width: 50%; max-height: 50%"
+                src="assets/images/1176381.png"
+                class="img-responsive"
+                id ="img-responsive"
+                alt="Default image"
+              />
+            </ng-template>
+            <input
+              accept=".png, .jpg"
+              type="file"
+              id="file-upload"
+              (change)="onFileSelected($event)"
+              #fileInput
+            />
           </div>
   
         </mat-card-content>
@@ -74,13 +88,15 @@
             class="submit-button"
             (click)="saveDrink()"
             id="submit-button" 
-            [disabled]="addDrinkForm.invalid"
+            
           >
             Save drink
           </button>
+           <label style="color:#424242" *ngIf="this.isSaved==='true'" id="isSaved">{{this.isSaved}}</label>
         </div>
       </form>
     </div>
+   
   </div> 
 
   
