--- a/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
+++ b/restaurant-front/src/modules/bartender/pages/bartender-dashboard/bartender-dashboard.component.html
@@ -55,7 +55,7 @@
       <mat-list-item (click)="this.state=4" id="list-acc-orders-fild"
         >Accepted orders</mat-list-item
       >
-      <mat-list-item (click)="this.state=7">
+      <mat-list-item (click)="this.state=7" id="add-drink">
         Add new drink
       </mat-list-item>
     </mat-action-list>
