--- a/restaurant-front/src/modules/head-chef/pages/add-dish/add-dish.component.html
+++ b/restaurant-front/src/modules/head-chef/pages/add-dish/add-dish.component.html
@@ -20,25 +20,39 @@
   
           <mat-form-field class="example-full-width" appearance="fill">
             <mat-label>Type</mat-label>
-            <mat-select [(value)]="selectedType" required>
+            <mat-select [(value)]="selectedType" required id="dish-type-select">
               <mat-option *ngFor="let dishType of dishTypes" [value]="dishType.value">
                 {{dishType.viewValue}}
               </mat-option>
             </mat-select>
           </mat-form-field>
   
-          <input type="file" class="file-input"
-         (change)="onFileSelected($event)" #fileUpload/>
-  
-          <div class="file-upload">
-  
-            {{fileName || "No file uploaded yet."}}
-  
-              <button mat-mini-fab color="primary" class="upload-btn"
-                (click)="fileUpload.click()">
-                  <mat-icon>attach_file</mat-icon>
-              </button>
-          </div>
+         <div class="img-space">
+          <ng-container *ngIf="isImageSaved; else elseTemplate">
+            <img
+              style="width: 95px;height: 95%"
+              [src]="url"
+              alt="Image"
+              id="realImg"
+            />
+          </ng-container>
+          <ng-template #elseTemplate>
+            <img
+              style="max-width: 50%; max-height: 50%"
+              src="assets/images/1176381.png"
+              class="img-responsive"
+              id ="img-responsive"
+              alt="Default image"
+            />
+          </ng-template>
+          <input
+            accept=".png, .jpg"
+            type="file"
+            id="file-upload"
+            (change)="onFileSelected($event)"
+            #fileInput
+          />
+        </div>
   
         </mat-card-content>
         </div>
@@ -61,6 +75,7 @@
           >
             Save dish
           </button>
+          <label style="color:#424242" *ngIf="this.isSaved==='true'" id="isSaved">{{this.isSaved}}</label>
         </div>
       </form>
     </div>
