--- a/restaurant-front/src/modules/shared/components/ingredients-table/ingredients-table.component.html
+++ b/restaurant-front/src/modules/shared/components/ingredients-table/ingredients-table.component.html
@@ -1,11 +1,11 @@
 <div id="container-div">
     <h3>Ingredients</h3>
-    <button (click)="openDialog()"> <mat-icon>add</mat-icon></button>
+    <button (click)="openDialog()" id="input-ingredient"> <mat-icon>add</mat-icon></button>
      <table mat-table [dataSource] ="observable" class="mat-elevation-z8">
 
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        <td mat-cell *matCellDef="let element" id="row{{element.name}}"> {{element.name}} </td>
       </ng-container>
 
       <ng-container matColumnDef="isAlergen">
