--- a/restaurant-front/src/modules/shared/components/input-ingredient-dialog/input-ingredient-dialog.component.html
+++ b/restaurant-front/src/modules/shared/components/input-ingredient-dialog/input-ingredient-dialog.component.html
@@ -2,15 +2,15 @@
 
     <mat-form-field appearance="fill">
         <mat-label>Ingredient name</mat-label>
-        <input matInput [(ngModel)]="this.name">
+        <input matInput id="ing-name" [(ngModel)]="this.name">
       </mat-form-field>
 
       <mat-radio-group aria-label="Is alergen" [(ngModel)]="this.isAlergen">
-        <mat-radio-button value="1">Yess</mat-radio-button>
-        <mat-radio-button value="2">No</mat-radio-button>
+        <mat-radio-button id="isAlergenY" value="1">Yess</mat-radio-button>
+        <mat-radio-button id="isAlergenN" value="2">No</mat-radio-button>
       </mat-radio-group>
       <div mat-dialog-actions>
-        <button mat-button (click)="onSaveClick()">Save</button>
+        <button mat-button id="save-ing" (click)="onSaveClick()">Save</button>
         <button mat-button  (click)="close()" cdkFocusInitial>Cancel</button>
       </div>
 </div>
