--- a/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
+++ b/restaurant-front/src/modules/waiter/pages/create-order/create-order.component.html
@@ -16,7 +16,6 @@
       class="avatar mat-elevation-z8"
       src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
       alt="”animated”"
-      (click)="this.router.navigate([''])"
     />
 
     <h4 class="name">Ordered Items</h4>
@@ -81,6 +80,7 @@
 
     <div class="modal-footer">
       <button
+        id="cancel-create-order-button"
         mat-flat-button
         type="button"
         color="accent"
