--- a/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
+++ b/restaurant-front/src/modules/waiter/components/customize-ordered-item/customize-ordered-item.component.html
@@ -3,11 +3,10 @@
     <img
       src="https://media.giphy.com/media/UJvttT1byONauiwlex/giphy.gif"
       alt="”animated”"
-      (click)="this.router.navigate([''])"
     />
   </div>
   <div id="form-holder-div">
-    <h2>Customize {{ this.menuItemWithIngredients.name }}</h2>
+    <h2 id="menu-item-name-title">Customize {{ this.menuItemWithIngredients.name }}</h2>
     <mat-divider></mat-divider>
     <div class="row">
       <span style="margin-right: 50%">Price: </span>
@@ -58,6 +57,7 @@
     <div class="modal-footer">
       
       <button
+        id="cancel-customized-ordered-item-button"
         mat-flat-button
         type="button"
         color="accent"
@@ -66,7 +66,9 @@
       >
         Cancel
       </button>
-      <button *ngIf="!this.editMode"
+      <button 
+        id="add-customized-ordered-item-button"
+        *ngIf="!this.editMode"
         mat-flat-button
         type="button"
         color="primary"
@@ -76,7 +78,9 @@
         Add to order
       </button>
       
-      <button *ngIf="this.editMode"
+      <button 
+        id="save-changes-to-customized-ordered-item-button"
+        *ngIf="this.editMode"
         mat-flat-button
         type="button"
         color="primary"
