--- a/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
+++ b/restaurant-front/src/modules/manager/pages/manager-dashboard/manager-dashboard.component.scss
@@ -15,7 +15,6 @@ mat-sidenav {
 }
 
 .content {
-  height: calc(100vh - 98px);
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
@@ -82,8 +81,7 @@ img {
 }
 
 mat-action-list {
-  max-height: 300px;
-  overflow: auto;
+  max-height: 400px;
 }
 
 .custom-scroll-bar::-webkit-scrollbar {
@@ -92,4 +90,30 @@ mat-action-list {
 
 .custom-scroll-bar::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.26);
+}
+
+.paychecks {
+  width: 100%;
+  height: 100%;
+}
+
+.items {
+  width: 100%;
+  height: 100%;
+}
+
+mat-action-list mat-list-item {
+  color: white;
+}
+
+.side-icon {
+  width: 30px;
+  height: 30px;
+
+  background-size: cover;
+
+  background-position: top center;
+
+  border-radius: 80%;
+  padding: 15px;
 }
