--- a/restaurant-front/src/modules/manager/pages/menu-item-card/menu-item-card.component.html
+++ b/restaurant-front/src/modules/manager/pages/menu-item-card/menu-item-card.component.html
@@ -1,7 +1,4 @@
-<mat-card
-  *ngIf="this.item"
-  style="width: fit-content; margin-left: 10%; margin-top: 10px"
->
+<mat-card *ngIf="this.item">
   <mat-card-header>
     <img
       mat-card-avatar
@@ -12,66 +9,77 @@
 
     <mat-card-title> {{ this.item.menuItem.name }}</mat-card-title>
   </mat-card-header>
+  <img mat-card-md-image [src]="this.image" alt="Photo of item" />
   <mat-card-content>
-    <img mat-card-md-image [src]="this.image" alt="Photo of item" />
-    <mat-divider></mat-divider>
-    <form class="example-form" [formGroup]="priceForm">
-      <mat-form-field class="example-full-width">
-        <span matPrefix> </span>
+    <form
+      style="margin-top: 5px"
+      class="price-form"
+      id="price-form"
+      [formGroup]="priceForm"
+    >
+      <mat-form-field>
+        <p>Current price: {{ this.item.currentPrice }}</p>
         <input
           matInput
           class="form-control"
           type="number"
-          placeholder="Price"
+          placeholder="New price"
           formControlName="price"
           id="price"
           name="price"
           required
           min="0"
         />
+      </mat-form-field>
+      <mat-form-field>
+        <p>Current purchase price: {{ this.item.currentPurchasePrice }}</p>
         <input
           matInput
           class="form-control"
           type="number"
-          placeholder="Purchase price"
+          placeholder="New purchase price"
           formControlName="purchasePrice"
-          id="purchasePrice"
-          name="purchasePrice"
+          id="purchase-price"
+          name="purchase-price"
           required
           min="0"
         />
-        <button
-          mat-flat-button
-          color="accent"
-          type="submit"
-          class="submit-button"
-          (click)="onEditPrice()"
-          [disabled]="priceForm.invalid"
-          id="submit-button"
-        >
-          <mat-icon>save</mat-icon>
-        </button>
       </mat-form-field>
+
+      <button
+        mat-mini-fab
+        color="accent"
+        type="submit"
+        (click)="onEditPrice()"
+        [disabled]="priceForm.invalid"
+      >
+        <mat-icon>save</mat-icon>
+      </button>
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <div
-      matTooltip="Can't approve item without prices"
-      [matTooltipDisabled]="this.item.price > 0 && this.item.purchasePrice > 0"
-    >
-      <p>Is on menu:</p>
-      <button
-        [disabled]="this.item.price <= 0 || this.item.purchasePrice <= 0"
-        mat-button
-        (click)="onTogleIsActive()"
+    <div fxLayout="row">
+      <div
+        matTooltip="Can't approve item without prices"
+        [matTooltipDisabled]="
+          this.item.price > 0 && this.item.purchasePrice > 0
+        "
+        style="font-size: medium"
       >
-        <mat-icon>{{
-          this.item.active ? "check_box" : "check_box_outline_blank"
-        }}</mat-icon>
+        Is on menu:
+        <button
+          [disabled]="this.item.price <= 0 || this.item.purchasePrice <= 0"
+          mat-button
+          (click)="onTogleIsActive()"
+        >
+          <mat-icon>{{
+            this.item.active ? "check_box" : "check_box_outline_blank"
+          }}</mat-icon>
+        </button>
+      </div>
+      <button style="float: right" mat-button (click)="onDeleteItem()">
+        <mat-icon>delete</mat-icon>
       </button>
     </div>
-    <button mat-button (click)="onDeleteItem()">
-      <mat-icon>delete</mat-icon>
-    </button>
   </mat-card-actions>
 </mat-card>
