edit employee e2e test

--- a/restaurant-front/src/modules/shared/components/employees/employees.component.html
+++ b/restaurant-front/src/modules/shared/components/employees/employees.component.html
@@ -140,6 +140,7 @@
           class="submit-button"
           (click)="openEditEmployeeDialog(element)"
           name="editEmployeeBttn"
+          id="editEmployee"
         >
           <mat-icon>edit</mat-icon>
         </button>
