--- a/restaurant-front/src/modules/admin/pages/edit-employee/edit-employee.component.html
+++ b/restaurant-front/src/modules/admin/pages/edit-employee/edit-employee.component.html
@@ -13,7 +13,7 @@
           <img
             style="max-width: 50%; max-height: 50%"
             [src]="this.image"
-            alt="Image"
+            alt="No image"
           />
         </ng-container>
         <input
@@ -27,7 +27,7 @@
     </mat-grid-tile>
     <!-- name -->
     <mat-grid-tile>
-      <mat-form-field id="name" class="input">
+      <mat-form-field class="input">
         <input
           matInput
           type="text"
@@ -40,7 +40,7 @@
     </mat-grid-tile>
     <!-- surname -->
     <mat-grid-tile>
-      <mat-form-field id="surname" class="input">
+      <mat-form-field class="input">
         <input
           matInput
           type="text"
@@ -59,7 +59,7 @@
     </mat-grid-tile>
     <!-- telephone -->
     <mat-grid-tile>
-      <mat-form-field id="telephone" class="input">
+      <mat-form-field class="input">
         <input
           matInput
           type="text"
@@ -90,8 +90,8 @@
     type="submit"
     class="submit-button"
     (click)="saveEmployee()"
-    [disabled]="editEmployeeForm.invalid || !this.isImageSaved"
-    id="submit-button"
+    [disabled]="editEmployeeForm.invalid"
+    id="save-button"
   >
     Save
   </button>
