Finished e2e test for ViewAndPayOrder

--- a/restaurant-front/src/modules/waiter/components/table-options/table-options.component.html
+++ b/restaurant-front/src/modules/waiter/components/table-options/table-options.component.html
@@ -170,6 +170,7 @@
       "
     >
       <button
+        id="close-table-options-button"
         mat-flat-button
         color="accent"
         type="submit"
@@ -189,6 +190,7 @@
       "
     >
       <button
+        id="close-table-options-button"
         mat-flat-button
         type="button"
         color="accent"
