--- a/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
+++ b/restaurant-front/src/modules/waiter/components/pay-order/pay-order.component.html
@@ -59,7 +59,7 @@
 
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef>Status</th>
-          <td mat-cell *matCellDef="let element">{{ element.status | replaceUnderscore }}</td>
+          <td mat-cell *matCellDef="let element" name="ordered-item-status">{{ element.status | replaceUnderscore }}</td>
         </ng-container>
       
         <ng-container matColumnDef="deliver">
@@ -106,7 +106,7 @@
         <mat-label style="color: #b3b3b3"
           >Received amount $</mat-label
         >
-        <input matInput type="number" min="1" #received (change)="receivedAmountChange()"/>
+        <input matInput type="number" min="1" #received (change)="receivedAmountChange()" id="received-amount-input"/>
       </mat-form-field>
     </div>
 
@@ -115,7 +115,7 @@
         <mat-label style="color: #b3b3b3"
           >Change left $</mat-label
         >
-        <input matInput type="number" min="1" #change [value]="this.changeLeft" [disabled]="true" />
+        <input matInput type="number" min="1" #change [value]="this.changeLeft" [disabled]="true" id="left-amount-input"/>
       </mat-form-field>
     </div>
 
